tests/parse_error/invalid_color_string_3.ll
# Should be a literal (#aabbcc), not a real string
color c = "#aabbcc"
